# Quadcopter

./: .gitignore  Components.ods  ICs+Sensors  README.md  goals.txt  nina_notable_gpio.txt  nina_resource_list.txt  pcb_checklist.txt
Code/: build.sh  quadcopter.code-workspace
Code/RTOS/Source/: CMakeLists.txt  gcc-arm-none-eabi.cmake  main.c
Code/RTOS/Source/Include/: link_full.ld
Code/RTOS/Source/Kernel/: SystemInit.S  entry.S  kerror.c  kerror.h  kexceptions.S  kexceptions.c  kexceptions.h  kinterrupts.S  kinterrupts.h  kmemory.c  kmemory.h  kstart.c  ktypes.h
Code/RTOS/Source/Startup/: startup_config.c  startup_config.h
PCB/: Flight Controller.b#1  Flight Controller.b#2  Flight Controller.b#3  Flight Controller.b#4  Flight Controller.b#5  Flight Controller.b#6  Flight Controller.b#7  Flight Controller.b#8  Flight Controller.b#9  Flight Controller.brd  Flight Controller.s#1  Flight Controller.s#2  Flight Controller.s#3  Flight Controller.s#4  Flight Controller.s#5  Flight Controller.s#6  Flight Controller.s#7  Flight Controller.s#8  Flight Controller.s#9  Flight Controller.sch  eagle.epf
